--- a/microservice/src/main/resources/application.properties
+++ b/microservice/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 quotes.base.url=http://gturnquist-quoters.cfapps.io
 github.repo.url=https://api.github.com/search/repositories?q=created:
-github.oldusers.followers=https://api.github.com/search/users?q=followers:0
+github.oldusers.followers=https://api.github.com/search/users?q=followers:0&order=asc&sort=joined
 
 
 
