--- a/microservice/src/main/resources/application-test.properties
+++ b/microservice/src/main/resources/application-test.properties
@@ -1,6 +1,6 @@
 server.port=8080
 quotes.base.url=http://gturnquist-quoters.cfapps.io
-github.repo.url=https://api.github.com/search/repositories?q=created:
+github.repo.url=https://api.github.com/search/repositories?sort=stars&order=desc&q=created:q=created:
 github.oldusers.followers=https://api.github.com/search/users?q=followers:0&order=asc&sort=joined
 
 
