--- a/microservice/src/main/resources/application-prod.properties
+++ b/microservice/src/main/resources/application-prod.properties
@@ -1,7 +1,9 @@
 server.port=8080
-quotes.base.url=http://gturnquist-quoters.cfapps.io
 
-spring.cloud.config.server.git.uri=https://github.com/sandeep14283/config-git-repo.git
-spring.cloud.config.server.git.username=sandeep14283
-spring.cloud.config.server.git.password=enigma14283%
-spring.cloud.config.server.git.clone-on-start=true
+github.repo.url=https://api.github.com/search/repositories?sort=stars&order=desc&q=created:
+github.oldusers.followers=https://api.github.com/search/users?q=followers:0&order=asc&sort=joined
+
+
+# LOG Properties
+logging.level.root=INFO
+logging.pattern.console=%-5level%logger{36} - %msg%n
