--- a/microservice/src/main/resources/application.properties
+++ b/microservice/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 server.port=8080
-quotes.base.url=http://gturnquist-quoters.cfapps.io
+
 github.repo.url=https://api.github.com/search/repositories?sort=stars&order=desc&q=created:
 github.oldusers.followers=https://api.github.com/search/users?q=followers:0&order=asc&sort=joined
 
 
-
-spring.cloud.config.server.bootstrap=false
+# LOG Properties
+logging.level.root=INFO
+logging.pattern.console=%-5level%logger{36} - %msg%n
