validation added with proper messages

--- a/microservice/src/main/resources/application-dev.properties
+++ b/microservice/src/main/resources/application-dev.properties
@@ -5,4 +5,5 @@ github.oldusers.followers=https://api.github.com/search/users?q=followers:0&orde
 
 # LOG Properties
 logging.level.root=INFO
+logging.level.org.springframework=INFO
 logging.pattern.console=%-5level%logger{36} - %msg%n
