--- a/microservice/src/main/resources/application-test.properties
+++ b/microservice/src/main/resources/application-test.properties
@@ -6,4 +6,5 @@ github.oldusers.followers=https://api.github.com/search/users?q=followers:0&orde
 
 # LOG Properties
 logging.level.root=INFO
+logging.level.org.springframework=INFO
 logging.pattern.console=%-5level%logger{36} - %msg%n
