--- a/microservice/src/main/resources/application-dev.properties
+++ b/microservice/src/main/resources/application-dev.properties
@@ -7,3 +7,7 @@ github.oldusers.followers=https://api.github.com/search/users?q=followers:0&orde
 logging.level.root=INFO
 logging.level.org.springframework=INFO
 logging.pattern.console=%-5level%logger{36} - %msg%n
+
+
+# Messages
+record.length=record count should be greater than zero
